remove update, complete

--- a/src/app/write-item/write-item.component.html
+++ b/src/app/write-item/write-item.component.html
@@ -1,11 +1,14 @@
 <div>
   <mat-card style="max-width: 400px; margin-top: 50px; margin-left: 50px; text-align: left;">
-    <h2>Add Item</h2>
+    <h2>Add or Remove Item</h2>
     <div style="display: flex; align-items: center; flex: 1;">
       <label for="itemName">Item Name:</label>
       <input [(ngModel)]="itemName" type="text" id="itemName"/>
-      <button (click)="addItem()"> 
+      <button (click)="writeItem('add')"> 
         <mat-icon matPrefix>add</mat-icon>
+      </button>
+      <button (click)="writeItem('remove')"> 
+        <mat-icon matPrefix>remove</mat-icon>
       </button>
     </div>
   </mat-card>
